test/conformance/chainsaw/rbac/aggregate-to-admin/00-cluster-role.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: rbac
spec:
  try:
  - assert:
      file: admin-policies.yaml
  - assert:
      file: admin-policyreport.yaml
  - assert:
      file: admin-reports.yaml
  - assert:
      file: admin-updaterequest.yaml
