test/conformance/chainsaw/rbac/aggregate-to-admin/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: aggregate-to-admin
spec:
  steps:
  - name: step-00
    try:
    - assert:
        file: admin-policies.yaml
    - assert:
        file: admin-policyreport.yaml
    - assert:
        file: admin-reports.yaml
    - assert:
        file: admin-updaterequest.yaml
    - assert:
        file: admin-globalcontextentries.yaml
